--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm" >
     <mat-form-field>
-      <input matInput type="text" name="title" ngModel required #title="ngModel"/>
+      <input matInput type="text" name="title" ngModel required #title="ngModel" placeholder="Post Title" />
     </mat-form-field>
-    <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+    <mat-error *ngIf="title.invalid" >Please enter a post title</mat-error>
     <mat-form-field>
-      <textarea matInput rows="4" name="content" ngModel required #content="ngModel"></textarea>
+      <textarea matInput rows="4" name="content" ngModel required #content="ngModel" placeholder="Post Content" ></textarea>
     </mat-form-field>
     <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
     <button mat-raised-button color="accent" type="submit">
