--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,30 +1,30 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-card>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()"  *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
         type="text"
-        name="title"
-        [ngModel]="post?.title"
-        required
-        #title="ngModel"
+        formControlName="title"
         placeholder="Post Title"
       />
+      <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
     </mat-form-field>
-    <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+      <input type="file" #filePicker>
+    </div>
+
     <mat-form-field>
       <textarea
         matInput
         rows="4"
-        name="content"
-       [ngModel]="post?.content"
-        required
-        #content="ngModel"
+        formControlName="content"
         placeholder="Post Content"
       ></textarea>
+      <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
     </mat-form-field>
-    <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+
     <button mat-raised-button color="accent" type="submit">Save Post</button>
   </form>
 </mat-card>
